# BountyGame

./: .clang-format  .gitignore  CMakeLists.txt  NetworkedGame.sln  README.md  azure-pipelines.yml
Client/: CMakeLists.txt  Client.c  Client.h  Client.vcxproj  Client.vcxproj.filters  pch.h
Client/Config/: config.ini
Client/Input/: Input.c  Input.h
Client/Source/: Client.c  pch.h
Client/Source/Window/: GameWindow.c
Client/Window/: GameWindow.c  GameWindow.h
Game/: CMakeLists.txt
Game/Source/: Context.h  FreeCameraControls.c  FreeCameraControls.h  Main.c
Game/Source/Components/: ComponentType.h
Game/Source/Config/: GameConfig.c  GameConfig.h
Game/Source/Input/: InputMap.c  InputMap.h
Game/Source/Render/: RenderSystem.c  RenderSystem.h
Game/Source/Window/: GameWindow.c  GameWindow.h
GameScript/: CMakeLists.txt
GameScript/Source/Engine/: BaseComponent.cs  Context.cs  IComponent.cs
GameScript/Source/Engine/ECS/: ComponentType.cs  Entity.cs  EntityComponentMap.cs
GameScript/Source/Engine/Math/: Transform.cs  Vec.cs
GameScript/Source/Game/: AdderComponent.cs  OscillatePositionComponent.cs
GameScript/Test/: CMakeLists.txt  ISampleScript.cs  SampleScript.cs
OtterAsync/: CMakeLists.txt  OtterAsync.vcxproj  OtterAsync.vcxproj.filters
OtterAsync/Private/: pch.h
OtterAsync/Private/Otter/Async/: Scheduler.c
OtterAsync/Public/Otter/Async/: Scheduler.h  export.h
OtterConfig/: CMakeLists.txt  OtterConfig.vcxproj  OtterConfig.vcxproj.filters
OtterConfig/Private/: pch.h
OtterConfig/Private/Otter/Config/: Config.c  HashMap.c
OtterConfig/Public/Otter/Config/: Config.h  HashMap.h  export.h
OtterECS/: CMakeLists.txt  README.md
OtterECS/Private/Otter/ECS/: BitMap.c  ComponentList.c  ComponentPool.c  Entity.c  EntityComponentMap.c  SystemRegistry.c
OtterECS/Public/Otter/ECS/: BitMap.h  ComponentList.h  ComponentPool.h  Entity.h  EntityComponentMap.h  SystemRegistry.h  export.h
OtterECS/Test/: BitMapTest.cpp  CMakeLists.txt  ComponentListTest.cpp  EntityComponentMapTest.cpp  SystemRegistryTest.cpp
OtterGameState/: CMakeLists.txt  OtterGameState.vcxproj  OtterGameState.vcxproj.filters  pch.h
OtterGameState/Otter/GameState/: GameState.c  export.h
OtterGameState/Otter/GameState/Player/: Player.c  Player.h  PlayerInput.h
OtterGameState/Private/Otter/GameState/: GameState.c
OtterGameState/Private/Otter/GameState/Player/: Player.c
OtterGameState/Public/Otter/GameState/: GameState.h  export.h
OtterGameState/Public/Otter/GameState/Player/: Player.h
OtterMath/: CMakeLists.txt  OtterMath.vcxproj  OtterMath.vcxproj.filters
OtterMath/Private/: pch.h
OtterMath/Private/Otter/Math/: Clamp.c  Mat.c  Projection.c  Transform.c  Vec.c
OtterMath/Public/Otter/Math/: Clamp.h  Mat.h  MatDef.h  Projection.h  Transform.h  Vec.h  export.h
OtterNetworking/: CMakeLists.txt  OtterNetworking.vcxproj  OtterNetworking.vcxproj.filters  cpp.hint  dllmain.c  pch.h
OtterNetworking/Otter/Networking/Client/: GameClient.c  GameClient.h
OtterNetworking/Otter/Networking/Messages/: ControlMessages.h  Message.h
OtterNetworking/Otter/Networking/Server/: GameServer.c  GameServer.h
OtterNetworking/Otter/Networking/Shared/: GameNetworking.c  GameNetworking.h
OtterNetworking/Private/Otter/Networking/: dllmain.c
OtterNetworking/Private/Otter/Networking/Client/: TcpGameClient.c  UdpGameClient.c
OtterNetworking/Private/Otter/Networking/Messages/: ControlMessages.c  EntityMessages.c  Message.c
OtterNetworking/Private/Otter/Networking/Server/: TcpGameServer.c  UdpGameServer.c
OtterNetworking/Private/Otter/Networking/Shared/: GameNetworking.c
OtterNetworking/Public/Otter/Networking/: export.h
OtterNetworking/Public/Otter/Networking/Client/: TcpGameClient.h  UdpGameClient.h
OtterNetworking/Public/Otter/Networking/Messages/: ControlMessages.h  EntityMessages.h  Message.h
OtterNetworking/Public/Otter/Networking/Server/: TcpGameServer.h  UdpGameServer.h
OtterNetworking/Public/Otter/Networking/Shared/: GameNetworking.h
OtterRender/: CMakeLists.txt  OtterRender.vcxproj  OtterRender.vcxproj.filters  cpp.hint  pch.h
OtterRender/Private/: pch.h
OtterRender/Private/Otter/Render/: GpuBuffer.c  Mesh.c  Pipeline.c  RenderFrame.c  RenderInstance.c  RenderQueue.c  RenderStack.c  RenderSwapchain.c
OtterRender/Private/Otter/Render/Gltf/: GlbAsset.c  GlbJsonChunk.c  GlbJsonChunk.h
OtterRender/Private/Otter/Render/Material/: PbrMaterial.c
OtterRender/Private/Otter/Render/Memory/: GpuBuffer.c  MemoryType.c
OtterRender/Private/Otter/Render/Pipeline/: GBufferPipeline.c  PbrPipeline.c  Pipeline.c  RaytracingPipeline.c
OtterRender/Private/Otter/Render/Raytracing/: AABB.c  AccelerationStructure.c  BoundingVolumeHierarchy.c  Ray.c  RayTracingFunctions.c  ShaderBindingTable.c
OtterRender/Private/Otter/Render/RenderPass/: GBufferPass.c  LightingPass.c
OtterRender/Private/Otter/Render/Texture/: Image.c  Texture.c  (+2 more)
OtterRender/Public/Otter/Render/: Asset.h  Material.h  Mesh.h  MeshVertex.h  Pipeline.h  RenderFrame.h  RenderInstance.h  RenderQueue.h  RenderStack.h  RenderSwapchain.h  export.h
OtterRender/Shaders/: gbuffer.frag.glsl  gbuffer.vert.glsl  pbr.frag.glsl  pbr.vert.glsl  rt.common.glsl  rt.rchit.glsl  rt.rgen.glsl  rt.rmiss.glsl
OtterScript/: CMakeLists.txt
OtterScript/Private/: pch.h
OtterScript/Private/Otter/Script/: ScriptEngine.c
OtterScript/Public/Otter/Script/: ScriptEngine.h  export.h
OtterScript/Test/: CMakeLists.txt  SampleScriptTest.cpp
OtterUtil/: CMakeLists.txt  OtterUtil.vcxproj  OtterUtil.vcxproj.filters  pch.h
OtterUtil/Private/Otter/Util/: AutoArray.c  BitMap.c  File.c  Hash.c  HashMap.c  Heap.c  LinkedList.c  Log.c  Profiler.c  StableAutoArray.c
OtterUtil/Public/Otter/Util/: AutoArray.h  BitMap.h  File.h  Hash.h  HashMap.h  Heap.h  LinkedList.h  Log.h  Profiler.h  StableAutoArray.h  export.h
OtterUtil/Test/: BitMapTest.cpp  CMakeLists.txt  HashMapTest.cpp  SparseAutoArrayTest.cpp
Server/: CMakeLists.txt  Server.c  Server.vcxproj  Server.vcxproj.filters
Server/Config/: config.ini
Server/Source/: Server.h  pch.h
(+49 files in other folders)
